# pyp4

./: .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
docs/source/: conf.py  index.rst  modules.rst  processors.rst
docs/source/modules/: action.rst  block.rst  deparser.rst  expr.rst  packet.rst  parser.rst  process.rst  processor.rst  pyp4.rst  table.rst
docs/source/modules/processors/: v1model.rst
examples/: README.md  run_examples.py
examples/ping/: README.md  run.py
examples/ping/p4/: ping.json  ping.p4
pyp4/: __init__.py  action.py  block.py  deparser.py  expr.py  packet.py  parser.py  process.py  processor.py  table.py  trace.py
pyp4/processors/: v1model.py
tests/: conftest.py  mock_device.py  test_action.py  test_block.py  test_deparser.py  test_expr.py  test_packet.py  test_parser.py  test_process.py  test_processor.py  test_table.py  test_v1model.py
tests/p4/: basic.json  basic.p4  complex.json  complex.p4  expressions.json  expressions.p4  v1model.json  v1model.p4
